Revision history for Perl extension Module::Build.

0.3603 - 

0.3602 - Mon Jan 18 22:09:54 EST 2010

 Bug fixes:

 - Fix failures in t/properties/needs_compiler.t when $ENV{CC} is set
   (RT#53296) [David Golden, adapted from patch by Jens Rehsack]

0.3601 - Mon Dec 21 14:39:33 EST 2009

 Bug fixes:

 - When the currently running Module::Build is not the same as the one
   that created the Build file, there is now a warning rather than a fatal
   error.  This helps installation of dependency chains where a dependency
   might configure_requires a new Module::Build after Build.PL was already
   run for an earlier distribution. [David Golden, on advice of Matt Trout]

 Other:

 - t/bundle_inc.t fails in odd ways.  This test of an experimental feature
   should not prevent users from installing Module::Build, so this test
   now skips unless $ENV{MB_TEST_EXPERIMENTAL} is true

0.36 - Sun Dec 20 15:02:38 EST 2009

No changes from 0.35_15 other than the version number.

Summary of major changes since 0.35:

 Enhancements:

 - Added 'Build installdeps' action to install needed dependencies via
   a user-configurable command line program.  (Defaults to 'cpan'.)

 - Command line options may be set via the PERL_MB_OPT environment
   variable (similar to PERL_MM_OPT in ExtUtils::MakeMaker)

 - Generates MYMETA.yml during Build.PL (new standard protocol for
   communicating configuration results between toolchain components)

 - Reduced amount of console output under normal operation (use --verbose
   to see all output)

 - Added experimental inc/ bundling; see Module::Build::Bundling for
   details.

 New or changed properties:

 - Added 'share_dir' property to provide File::ShareDir support;
   File::ShareDir automatically added to 'requires' if 'share_dir' is set

 - Added 'needs_compiler' property.  Defaults to true if XS or c_source
   exist.  If true, ExtUtils::CBuilder is also added to build_requires.
