@@ -2,6 +2,14 @@ Revision history for Perl extension Module::Build.
 
 0.3603 - 
 
+ Bug fixes:
+
+ - Module::Build::Compat would croak on distibutions that set requires
+   'perl' to a dotted decimal like '5.6.2'.  We now skip that key
+   since it doesn't go into PREREQ_PM and we numify it properly for
+   'use 5.006002' in the generated Makefile.PL (RT#53409)
+   [David Golden, adapted from patch by G. Allen Morris III]
+
 0.3602 - Mon Jan 18 22:09:54 EST 2010
 
  Bug fixes:
